--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             <textPath style="font-family: fantasy;" xlink:href="#partialPath" startOffset="12">
                 Chúc mẹ và các chị 8-3 vui vẻ
                 🌹!...........................................................................................................
-                 My Family ......................................
+                 My Family ..................................
             </textPath>
         </text>
 
@@ -757,7 +757,7 @@
         <p class="text-click-p" id="text-click" style=" display: none;   font-family: fantasy;
         color: indianred;
         font-size: 50px;
-        top: 80%;">Nhấn vào tôi!</p>
+        top: 80%;">Nhấn vào!</p>
     </div>
 
 
