--- a/index.html
+++ b/index.html
@@ -463,9 +463,9 @@
 
         <text dy="-2">
             <textPath style="font-family: fantasy;" xlink:href="#partialPath" startOffset="12">
-                Chúc mẹ và các chị 8-3 vui vẻ
+                Happy International Women's Day
                 🌹!...........................................................................................................
-                 My Family ..................................
+                 Dung bae ..................................
             </textPath>
         </text>
 
