--- a/index.html
+++ b/index.html
@@ -463,9 +463,9 @@
 
         <text dy="-2">
             <textPath style="font-family: fantasy;" xlink:href="#partialPath" startOffset="12">
-                Happy International Women's Day
+                Dinh Thi Dung
                 🌹!...........................................................................................................
-                 Dung bae ..................................
+                  ....................................................
             </textPath>
         </text>
 
